--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+nav a.active {
+  color: #8d3fc2;
+  border-color: #9d2dd1;
+  padding: 5px 8px;
+  border-radius: 5px;
+}
+nav a.active:hover {
+  background-color: #ccd9e3;
+  padding: 5px 8px;
+  border-radius: 5px;
+}
